Optimize: refined copy & added micro-animations (preserves theme)

--- a/index_backup.html
+++ b/index_backup.html
@@ -38,9 +38,9 @@
         <div class="container hero-container">
             <div class="hero-content">
                 <div class="badge">✨ 新一代沉浸式学习体验</div>
-                <h1>浏览即学习，<br><span class="gradient-text">重塑你的语言天赋</span></h1>
+                <h1>把每一次浏览<br>变成<span class="gradient-text">成长的机会</span></h1>
                 <p class="hero-desc">
-                    别再专门抽时间背单词了。Immerse 将你每天阅读的文章、博客和新闻，瞬间转化为强大的语言学习引擎。在语境中，自然习得。
+                    Immerse 是一款智能浏览器插件，能在你浏览中文网页时，智能将部分词汇替换为通过语境学习的英语单词。无需刻意背诵，在日常阅读中自然习得。
                 </p>
                 <div class="hero-actions">
                     <a href="#download" class="btn-primary">
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>为什么选择 Immerse?</h2>
-                <p>在真实语境中"悟"懂单词，拒绝死记硬背</p>
+                <p>不仅仅是翻译工具，更是你的私人语言教练</p>
             </div>
             <div class="features-grid">
                 <div class="feature-card">
