Remove emojis: replaced with professional SVG icons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="hero">
         <div class="container hero-container">
             <div class="hero-content">
-                <div class="badge">✨ 新一代沉浸式学习体验</div>
+                <div class="badge">新一代沉浸式学习体验</div>
                 <h1>浏览即学习，<br><span class="gradient-text">重塑你的语言天赋</span></h1>
                 <p class="hero-desc">
                     别再专门抽时间背单词了。Immerse 将你每天阅读的文章、博客和新闻，瞬间转化为强大的语言学习引擎。在语境中，自然习得。
@@ -104,12 +104,12 @@
             </div>
             <div class="features-grid">
                 <div class="feature-card">
-                    <div class="feature-icon bg-blue">🔍</div>
+                    <div class="feature-icon bg-blue"><svg viewBox="0 0 24 24" width="28" height="28" stroke="currentColor" fill="none" stroke-width="2"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.35-4.35"/></svg></div>
                     <h3>智能语境替换</h3>
                     <p>不只是简单的单词替换，更确保在句子中的语法和语境正确，让学习更自然。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon bg-purple">🤖</div>
+                    <div class="feature-icon bg-purple"><svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor"><path d="M12 2a2 2 0 0 1 2 2c0 .74-.4 1.39-1 1.73V7h1a7 7 0 0 1 7 7h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v1a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-1H2a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h1a7 7 0 0 1 7-7h1V5.73c-.6-.34-1-.99-1-1.73a2 2 0 0 1 2-2M7.5 13A1.5 1.5 0 0 0 6 14.5 1.5 1.5 0 0 0 7.5 16 1.5 1.5 0 0 0 9 14.5 1.5 1.5 0 0 0 7.5 13m9 0a1.5 1.5 0 0 0-1.5 1.5 1.5 1.5 0 0 0 1.5 1.5 1.5 1.5 0 0 0 1.5-1.5 1.5 1.5 0 0 0-1.5-1.5z"/></svg></div>
                     <h3>AI 深度解析</h3>
                     <p>内置 AI 助手，为你深入解析词源、词根词缀和相关用法，知其然更知其所以然。</p>
                 </div>
@@ -119,17 +119,17 @@
                     <p>无论在家还是在公司，你的生词本和学习进度实时同步，学习永不中断。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon bg-orange">📊</div>
+                    <div class="feature-icon bg-orange"><svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor"><path d="M22 21H2V3h2v16h2v-7h4v7h2V7h4v12h2v-5h4v7z"/></svg></div>
                     <h3>可视化进度</h3>
                     <p>精美的仪表盘展示你的每日掌握情况，看着词汇量一天天增长，动力满满。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon bg-pink">🎯</div>
+                    <div class="feature-icon bg-pink"><svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8m0-14c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6m0 10c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4m0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"/></svg></div>
                     <h3>个性化词库</h3>
                     <p>包含科技、金融、法律等专业词库，支持根据你的兴趣定制学习内容。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon bg-cyan">🔌</div>
+                    <div class="feature-icon bg-cyan"><svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor"><path d="M16 7V3h-2v4h-4V3H8v4H6v4l2 1v3l-3 3v2h14v-2l-3-3v-3l2-1V7h-2z"/></svg></div>
                     <h3>自带 API Key</h3>
                     <p>支持使用自己的 OpenAI/Gemini/DeepSeek Key，灵活选择，成本可控。</p>
                 </div>
@@ -180,7 +180,7 @@
                         <p>适合轻度尝试的用户</p>
                     </div>
                     <ul class="price-list">
-                        <li>✨ 每日 50 次 AI 调用</li>
+                        <li>每日 50 次 AI 调用</li>
                         <li>📚 无限基础词汇查询</li>
                         <li>🚫 无深度 AI 解析</li>
                         <li>🔑 支持自带 API Key</li>
@@ -197,9 +197,9 @@
                         <div class="yearly-price">或 ¥58 /年</div>
                     </div>
                     <ul class="price-list">
-                        <li>🚀 每日 500 次 AI 调用</li>
-                        <li>🧠 深度 AI 词根词缀解析</li>
-                        <li>☁️ 云端同步学习进度</li>
+                        <li>每日 500 次 AI 调用</li>
+                        <li>深度 AI 词根词缀解析</li>
+                        <li>云端同步学习进度</li>
                         <li>🎁 邀请好友送会员</li>
                     </ul>
                     <a href="#" class="btn-primary full-width">立即升级</a>
@@ -214,7 +214,7 @@
                     </div>
                     <ul class="price-list">
                         <li>🔥 每日 5000 次 AI 调用</li>
-                        <li>⭐ 包含所有 Pro 特权</li>
+                        <li>• 包含所有 Pro 特权</li>
                         <li>⚡ 极速 AI 响应优先权</li>
                         <li>🛠️ 早期功能内测资格</li>
                     </ul>
