--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                     </div>
                 </div>
                 <div class="floating-card card-1">
-                    <span class="icon">🧠</span> 语境记忆
+                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M12 2a9 9 0 0 0-9 9c0 4.17 2.84 7.67 6.69 8.69L12 22l2.31-2.31C18.16 18.67 21 15.17 21 11a9 9 0 0 0-9-9m0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7"/></svg> 语境记忆
                 </div>
                 <div class="floating-card card-2">
-                    <span class="icon">⚡️</span> 智能替换
+                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M11 21h-1l1-7H7.5c-.88 0-.33-.75-.31-.78C8.48 10.94 10.42 7.54 13.01 3h1l-1 7h3.51c.4 0 .62.19.4.66C12.97 17.55 11 21 11 21"/></svg> 智能替换
                 </div>
             </div>
         </div>
@@ -182,7 +182,7 @@
                     <ul class="price-list">
                         <li>每日 50 次 AI 调用</li>
                         <li>📚 无限基础词汇查询</li>
-                        <li>🚫 无深度 AI 解析</li>
+                        <li>无深度 AI 解析</li>
                         <li>🔑 支持自带 API Key</li>
                     </ul>
                     <a href="#" class="btn-outline full-width">开始使用</a>
