--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="legal/privacy.html">隐私政策</a>
                 <a href="https://chrome.google.com/webstore" class="btn-primary-sm">安装插件</a>
             </div>
-            <button class="mobile-menu-btn">☰</button>
+            <button class="mobile-menu-btn"><svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></button>
         </div>
     </nav>
 
@@ -44,7 +44,7 @@
                 </p>
                 <div class="hero-actions">
                     <a href="#download" class="btn-primary">
-                        <span class="icon">🚀</span> 立即下载安装
+                        立即下载安装
                     </a>
                     <a href="#demo" class="btn-secondary">查看演示</a>
                 </div>
@@ -114,7 +114,7 @@
                     <p>内置 AI 助手，为你深入解析词源、词根词缀和相关用法，知其然更知其所以然。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon bg-green">☁️</div>
+                    <div class="feature-icon bg-green"><svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor"><path d="M17.5,19c3.037,0,5.5-2.463,5.5-5.5c0-2.34-1.463-4.331-3.535-5.118C18.816,4.521,15.539,2,11.5,2C7.994,2,5.011,4.015,3.758,6.963C1.655,7.749,0,9.75,0,12.5C0,16.09,2.91,19,6.5,19h11V19z"/></svg></div>
                     <h3>云端同步</h3>
                     <p>无论在家还是在公司，你的生词本和学习进度实时同步，学习永不中断。</p>
                 </div>
@@ -181,9 +181,9 @@
                     </div>
                     <ul class="price-list">
                         <li>每日 50 次 AI 调用</li>
-                        <li>📚 无限基础词汇查询</li>
+                        <li>无限基础词汇查询</li>
                         <li>无深度 AI 解析</li>
-                        <li>🔑 支持自带 API Key</li>
+                        <li>支持自带 API Key</li>
                     </ul>
                     <a href="#" class="btn-outline full-width">开始使用</a>
                 </div>
@@ -200,7 +200,7 @@
                         <li>每日 500 次 AI 调用</li>
                         <li>深度 AI 词根词缀解析</li>
                         <li>云端同步学习进度</li>
-                        <li>🎁 邀请好友送会员</li>
+                        <li>邀请好友送会员</li>
                     </ul>
                     <a href="#" class="btn-primary full-width">立即升级</a>
                 </div>
@@ -213,10 +213,10 @@
                         <p>适合专业学习者</p>
                     </div>
                     <ul class="price-list">
-                        <li>🔥 每日 5000 次 AI 调用</li>
+                        <li>每日 5000 次 AI 调用</li>
                         <li>• 包含所有 Pro 特权</li>
-                        <li>⚡ 极速 AI 响应优先权</li>
-                        <li>🛠️ 早期功能内测资格</li>
+                        <li>极速 AI 响应优先权</li>
+                        <li>早期功能内测资格</li>
                     </ul>
                     <a href="#" class="btn-outline full-width">获取 Ultra</a>
                 </div>
