Force publish: updated badge and added .nojekyll

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="hero">
         <div class="container hero-container">
             <div class="hero-content">
-                <div class="badge">新一代沉浸式学习体验</div>
+                <div class="badge">全新改版：更纯净的沉浸式学习体验</div>
                 <h1>浏览即学习，<br><span class="gradient-text">重塑你的语言天赋</span></h1>
                 <p class="hero-desc">
                     别再专门抽时间背单词了。Immerse 将你每天阅读的文章、博客和新闻，瞬间转化为强大的语言学习引擎。在语境中，自然习得。
