Final cleanup: complete rewrite of index.html to eliminate all emojis and encoding glitches

--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
                 <a href="legal/privacy.html">隐私政策</a>
                 <a href="https://chrome.google.com/webstore" class="btn-primary-sm">安装插件</a>
             </div>
-            <button class="mobile-menu-btn"><svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></button>
+            <button class="mobile-menu-btn">
+                <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <line x1="3" y1="12" x2="21" y2="12"></line>
+                    <line x1="3" y1="6" x2="21" y2="6"></line>
+                    <line x1="3" y1="18" x2="21" y2="18"></line>
+                </svg>
+            </button>
         </div>
     </nav>
 
@@ -86,10 +93,16 @@
                     </div>
                 </div>
                 <div class="floating-card card-1">
-                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M12 2a9 9 0 0 0-9 9c0 4.17 2.84 7.67 6.69 8.69L12 22l2.31-2.31C18.16 18.67 21 15.17 21 11a9 9 0 0 0-9-9m0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7"/></svg> 语境记忆
+                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor">
+                        <path
+                            d="M12 2a9 9 0 0 0-9 9c0 4.17 2.84 7.67 6.69 8.69L12 22l2.31-2.31C18.16 18.67 21 15.17 21 11a9 9 0 0 0-9-9m0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7" />
+                    </svg> 语境记忆
                 </div>
                 <div class="floating-card card-2">
-                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M11 21h-1l1-7H7.5c-.88 0-.33-.75-.31-.78C8.48 10.94 10.42 7.54 13.01 3h1l-1 7h3.51c.4 0 .62.19.4.66C12.97 17.55 11 21 11 21"/></svg> 智能替换
+                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor">
+                        <path
+                            d="M11 21h-1l1-7H7.5c-.88 0-.33-.75-.31-.78C8.48 10.94 10.42 7.54 13.01 3h1l-1 7h3.51c.4 0 .62.19.4.66C12.97 17.55 11 21 11 21" />
+                    </svg> 智能替换
                 </div>
             </div>
         </div>
@@ -104,32 +117,54 @@
             </div>
             <div class="features-grid">
                 <div class="feature-card">
-                    <div class="feature-icon bg-blue"><svg viewBox="0 0 24 24" width="28" height="28" stroke="currentColor" fill="none" stroke-width="2"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.35-4.35"/></svg></div>
+                    <div class="feature-icon bg-blue"><svg viewBox="0 0 24 24" width="28" height="28"
+                            stroke="currentColor" fill="none" stroke-width="2">
+                            <circle cx="11" cy="11" r="8" />
+                            <path d="m21 21-4.35-4.35" />
+                        </svg></div>
                     <h3>智能语境替换</h3>
                     <p>不只是简单的单词替换，更确保在句子中的语法和语境正确，让学习更自然。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon bg-purple"><svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor"><path d="M12 2a2 2 0 0 1 2 2c0 .74-.4 1.39-1 1.73V7h1a7 7 0 0 1 7 7h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v1a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-1H2a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h1a7 7 0 0 1 7-7h1V5.73c-.6-.34-1-.99-1-1.73a2 2 0 0 1 2-2M7.5 13A1.5 1.5 0 0 0 6 14.5 1.5 1.5 0 0 0 7.5 16 1.5 1.5 0 0 0 9 14.5 1.5 1.5 0 0 0 7.5 13m9 0a1.5 1.5 0 0 0-1.5 1.5 1.5 1.5 0 0 0 1.5 1.5 1.5 1.5 0 0 0 1.5-1.5 1.5 1.5 0 0 0-1.5-1.5z"/></svg></div>
+                    <div class="feature-icon bg-purple"><svg viewBox="0 0 24 24" width="28" height="28"
+                            fill="currentColor">
+                            <path
+                                d="M12 2a2 2 0 0 1 2 2c0 .74-.4 1.39-1 1.73V7h1a7 7 0 0 1 7 7h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v1a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-1H2a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h1a7 7 0 0 1 7-7h1V5.73c-.6-.34-1-.99-1-1.73a2 2 0 0 1 2-2M7.5 13A1.5 1.5 0 0 0 6 14.5 1.5 1.5 0 0 0 7.5 16 1.5 1.5 0 0 0 9 14.5 1.5 1.5 0 0 0 7.5 13m9 0a1.5 1.5 0 0 0-1.5 1.5 1.5 1.5 0 0 0 1.5 1.5 1.5 1.5 0 0 0 1.5-1.5 1.5 1.5 0 0 0-1.5-1.5z" />
+                        </svg></div>
                     <h3>AI 深度解析</h3>
                     <p>内置 AI 助手，为你深入解析词源、词根词缀和相关用法，知其然更知其所以然。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon bg-green"><svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor"><path d="M17.5,19c3.037,0,5.5-2.463,5.5-5.5c0-2.34-1.463-4.331-3.535-5.118C18.816,4.521,15.539,2,11.5,2C7.994,2,5.011,4.015,3.758,6.963C1.655,7.749,0,9.75,0,12.5C0,16.09,2.91,19,6.5,19h11V19z"/></svg></div>
+                    <div class="feature-icon bg-green"><svg viewBox="0 0 24 24" width="28" height="28"
+                            fill="currentColor">
+                            <path
+                                d="M17.5,19c3.037,0,5.5-2.463,5.5-5.5c0-2.34-1.463-4.331-3.535-5.118C18.816,4.521,15.539,2,11.5,2C7.994,2,5.011,4.015,3.758,6.963C1.655,7.749,0,9.75,0,12.5C0,16.09,2.91,19,6.5,19h11V19z" />
+                        </svg></div>
                     <h3>云端同步</h3>
                     <p>无论在家还是在公司，你的生词本和学习进度实时同步，学习永不中断。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon bg-orange"><svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor"><path d="M22 21H2V3h2v16h2v-7h4v7h2V7h4v12h2v-5h4v7z"/></svg></div>
+                    <div class="feature-icon bg-orange"><svg viewBox="0 0 24 24" width="28" height="28"
+                            fill="currentColor">
+                            <path d="M22 21H2V3h2v16h2v-7h4v7h2V7h4v12h2v-5h4v7z" />
+                        </svg></div>
                     <h3>可视化进度</h3>
                     <p>精美的仪表盘展示你的每日掌握情况，看着词汇量一天天增长，动力满满。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon bg-pink"><svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8m0-14c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6m0 10c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4m0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"/></svg></div>
+                    <div class="feature-icon bg-pink"><svg viewBox="0 0 24 24" width="28" height="28"
+                            fill="currentColor">
+                            <path
+                                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8m0-14c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6m0 10c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4m0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2" />
+                        </svg></div>
                     <h3>个性化词库</h3>
                     <p>包含科技、金融、法律等专业词库，支持根据你的兴趣定制学习内容。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon bg-cyan"><svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor"><path d="M16 7V3h-2v4h-4V3H8v4H6v4l2 1v3l-3 3v2h14v-2l-3-3v-3l2-1V7h-2z"/></svg></div>
+                    <div class="feature-icon bg-cyan"><svg viewBox="0 0 24 24" width="28" height="28"
+                            fill="currentColor">
+                            <path d="M16 7V3h-2v4h-4V3H8v4H6v4l2 1v3l-3 3v2h14v-2l-3-3v-3l2-1V7h-2z" />
+                        </svg></div>
                     <h3>自带 API Key</h3>
                     <p>支持使用自己的 OpenAI/Gemini/DeepSeek Key，灵活选择，成本可控。</p>
                 </div>
@@ -214,7 +249,7 @@
                     </div>
                     <ul class="price-list">
                         <li>每日 5000 次 AI 调用</li>
-                        <li>• 包含所有 Pro 特权</li>
+                        <li>包含所有 Pro 特权</li>
                         <li>极速 AI 响应优先权</li>
                         <li>早期功能内测资格</li>
                     </ul>
