Update pricing: corrected Daily AI calls and Dictionary Limits to match actual product

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 d="M17.5,19c3.037,0,5.5-2.463,5.5-5.5c0-2.34-1.463-4.331-3.535-5.118C18.816,4.521,15.539,2,11.5,2C7.994,2,5.011,4.015,3.758,6.963C1.655,7.749,0,9.75,0,12.5C0,16.09,2.91,19,6.5,19h11V19z" />
                         </svg></div>
                     <h3>云端同步</h3>
-                    <p>无论在家还是在公司，你的生词本和学习进度实时同步，学习永不中断。</p>
+                    <p>无论在家还是在公司，你的生词本 and 学习进度实时同步，学习永不中断。</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon bg-orange"><svg viewBox="0 0 24 24" width="28" height="28"
@@ -215,9 +215,9 @@
                         <p>适合轻度尝试的用户</p>
                     </div>
                     <ul class="price-list">
-                        <li>每日 50 次 AI 调用</li>
+                        <li>每日 100 次 AI 调用</li>
+                        <li>支持 5 个词库并行并行</li>
                         <li>无限基础词汇查询</li>
-                        <li>无深度 AI 解析</li>
                         <li>支持自带 API Key</li>
                     </ul>
                     <a href="#" class="btn-outline full-width">开始使用</a>
@@ -232,8 +232,9 @@
                         <div class="yearly-price">或 ¥58 /年</div>
                     </div>
                     <ul class="price-list">
-                        <li>每日 500 次 AI 调用</li>
-                        <li>深度 AI 词根词缀解析</li>
+                        <li>每日 1000 次 AI 调用</li>
+                        <li>支持 10 个词库并行并行</li>
+                        <li>深度 AI 词根词源解析</li>
                         <li>云端同步学习进度</li>
                         <li>邀请好友送会员</li>
                     </ul>
@@ -245,13 +246,14 @@
                     <div class="price-header">
                         <h3>Ultra 版</h3>
                         <div class="price">¥12 <span class="period">/月</span></div>
-                        <p>适合专业学习者</p>
+                        <div class="yearly-price">或 ¥108 /年</div>
                     </div>
                     <ul class="price-list">
                         <li>每日 5000 次 AI 调用</li>
-                        <li>包含所有 Pro 特权</li>
+                        <li>无限制词库并行并行</li>
                         <li>极速 AI 响应优先权</li>
                         <li>早期功能内测资格</li>
+                        <li>包含所有 Pro 特权</li>
                     </ul>
                     <a href="#" class="btn-outline full-width">获取 Ultra</a>
                 </div>
