feat: 在原有基础上新增3个功能卡片
新增功能展示：
- CEFR 精准分级：6级欧标体系、3万+词库、双重验证
- 智能发现：高频生词追踪、AI一键翻译、专属词库
- 多场景适配：网页沉浸、YouTube字幕、PDF阅读、全页翻译

样式更新：
- 新增 bg-teal, bg-yellow, bg-indigo 颜色类

--- a/index.html
+++ b/index.html
@@ -168,6 +168,33 @@
                     <h3>自带 API Key</h3>
                     <p>支持使用自己的 OpenAI/Gemini/DeepSeek Key，灵活选择，成本可控。</p>
                 </div>
+                <div class="feature-card">
+                    <div class="feature-icon bg-teal"><svg viewBox="0 0 24 24" width="28" height="28"
+                            fill="currentColor">
+                            <path
+                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" />
+                        </svg></div>
+                    <h3>CEFR 精准分级</h3>
+                    <p>6 级欧标体系（A1-C2），3万+权威词库。本地词库+AI双重验证，确保词汇难度适配你的水平。</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon bg-yellow"><svg viewBox="0 0 24 24" width="28" height="28"
+                            fill="currentColor">
+                            <path
+                                d="M9 21c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-1H9v1zm3-19C8.14 2 5 5.14 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.86-3.14-7-7-7z" />
+                        </svg></div>
+                    <h3>智能发现</h3>
+                    <p>自动追踪你阅读中的高频生词，AI一键翻译添加到专属词库。你的阅读习惯就是最好的词库。</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon bg-indigo"><svg viewBox="0 0 24 24" width="28" height="28"
+                            fill="currentColor">
+                            <path
+                                d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H3V5h18v14zM9 8h2v8H9zm4 0h2v8h-2z" />
+                        </svg></div>
+                    <h3>多场景适配</h3>
+                    <p>网页沉浸、YouTube字幕、PDF阅读、全页翻译...一个插件，全场景覆盖。</p>
+                </div>
             </div>
         </div>
     </section>
