--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </div>
                     <ul class="price-list">
                         <li>每日 100 次 AI 调用</li>
-                        <li>支持 5 个词库并行并行</li>
+                        <li>支持 5 个词库并行</li>
                         <li>无限基础词汇查询</li>
                         <li>支持自带 API Key</li>
                     </ul>
@@ -260,7 +260,7 @@
                     </div>
                     <ul class="price-list">
                         <li>每日 1000 次 AI 调用</li>
-                        <li>支持 10 个词库并行并行</li>
+                        <li>支持 10 个词库并行</li>
                         <li>深度 AI 词根词源解析</li>
                         <li>云端同步学习进度</li>
                         <li>邀请好友送会员</li>
@@ -277,7 +277,7 @@
                     </div>
                     <ul class="price-list">
                         <li>每日 5000 次 AI 调用</li>
-                        <li>无限制词库并行并行</li>
+                        <li>无限制词库并行</li>
                         <li>极速 AI 响应优先权</li>
                         <li>早期功能内测资格</li>
                         <li>包含所有 Pro 特权</li>
